Update the template and add delete buttons to each URL object in the index page

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -24,6 +24,9 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td> <form method="POST" action="/urls/9sm5xK/delete"></form>
+            <botton type="submit" class="btn btn-outline-danger">Delete</botton>
+            </td>
           </tr>
         <% } %>
       </tbody>
