--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -24,9 +24,10 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td> <form method="POST" action="/urls/9sm5xK/delete"></form>
-            <botton type="submit" class="btn btn-outline-danger">Delete</botton>
-            </td>
+            <td> <form method="POST" action="/urls/<%= url %>/delete"> 
+              <button type="submit" class="btn btn-outline-danger">Delete</button>
+            </form>
+           </td>
           </tr>
         <% } %>
       </tbody>
