Update the urls_show.ejs file

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,7 +14,13 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
-    <div class="card-footer text-muted"></div>
+    <div class="card-footer text-muted">
+      <h3>Edit</h3>
+      <form method="POST" action="/urls/<%= shortURL %>">
+      <label for="newURL">New URL:</label>
+      <input type="text" name="newURL" placeholder="http://"
+      <botton type="submit" class="btn btn-primary">Submit</botton>
+      </form>
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
