Submit button fixed and added

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,8 +18,8 @@
       <h3>Edit</h3>
       <form method="POST" action="/urls/<%= shortURL %>">
       <label for="newURL">New URL:</label>
-      <input type="text" name="newURL" placeholder="http://"
-      <botton type="submit" class="btn btn-primary">Submit</botton>
+      <input type="text" name="newURL" placeholder="http://">
+      <button type="button" class="btn btn-outline-primary">Submit</button>
       </form>
   </div>
   <!-- Bootstrap JS -->
