Pass in the username and modify the header partial

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,10 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
+         <input type="text" class="form-control" name="username" placeholder="Username" style="width: 200px; margin-left: 400px;">
+         <button type="submit" class="btn btn-outline-dark my-2 my-sm-0">Login</button>
+        </form>
       </div>
     </div>
   </nav>
