--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,9 +8,17 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <% if(username) { %>
+          <form method="POST" action="/logout" class="form-inline">
+            <span style="margin-left: 300px; " >Logged In As: <%= username %></span>
+            <button type="submit" class="btn btn-outline-dark">Logout</button>
+          </div>
+          </form>
+          <% } else { %>
         <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
          <input type="text" class="form-control" name="username" placeholder="Username" style="width: 200px; margin-left: 400px;">
          <button type="submit" class="btn btn-outline-dark my-2 my-sm-0">Login</button>
+         <% } %>
         </form>
       </div>
     </div>
