--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,9 +8,9 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <% if(user[user_id]) { %>
+        <% if(user_id) { %>
           <form method="POST" class="form-inline" action="/logout">
-            <label style="width: 200px; margin-left: 250px;"> Login In As: <%= users[user_id].email %></label>
+            <label style="width: 200px; margin-left: 250px;"> Login In As: <%= username %></label>
             <button type="submit" class="btn btn-outline-dark">Logout</button>
           </div>
           </form>
