--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,6 +10,9 @@
 </head>
 <body>
   <%- include('partials/_header') %>
+  <% if (user_id === underfined) { %>
+   <p> You are not logged in. Please continue to Login page or Register a new account. </p>
+  <% } else { %>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table">
@@ -43,6 +46,7 @@
     <div> 
       Create a short URL <a href='#'>here</a>
     </div>
+    <% } %>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
