Update 404 message for id which does not exist

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>TinyApp</title>
@@ -25,7 +24,7 @@
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url].longURL %></td>
             <td> 
               <form method="GET" action="/urls/<%= url %>">
                 <button type="submit" class="btn btn-outline-primary">Edit</button>
@@ -33,7 +32,7 @@
             </td>
             <td>
               <form method="POST" action="/urls/<%= url %>/delete">
-              <button type="button" class="btn btn-outline-danger">Delete</button>
+              <button type="button" class="btn btn-outline-danger"> Delete</button>
               </form>
             </td>
           </tr>
