--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>TinyApp</title>
@@ -10,6 +11,11 @@
 <body>
   <%- include('partials/_header') %>
   <main style="margin: 1em;">
+
+    <% if (user_id === undefined) { %>
+      <p>You are not logged in. Please continue to Login page or Register an account.</p> 
+    <% } else { %>
+
     <h3>My URLs</h3>
     <table class="table">
       <thead>
@@ -42,6 +48,7 @@
     <div> 
       Create a short URL <a href='#'>here</a>
     </div>
+    <% } %>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
