--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -8,20 +8,31 @@
 
 <body>
   <%- include('partials/_header') %>
-  <div class="card text-center">
-      <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+  <% if (user_id === undefined) { %>
+    <p>You are not logged in. Please continue to Login page or Register an account.</p> 
+  <% } else { %>
+    <% if (haveAccess) { %>
+      <div class="card text-center">
+          <div class="card-header"></div>
+          <div class="card-body">
+            <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+            <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+            <p class="card-text">Long URL: <a href="#<%= longURL %>"><%= longURL %></a></p>
+          </div>
+        <div class="card-footer text-muted">
+          <h3>Edit</h3>
+          <form method="POST" action="/urls/<%= shortURL %>">
+          <label for="newURL">New URL:</label>
+          <input type="text" name="newURL" placeholder="http://">
+          <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
       </div>
-    <div class="card-footer text-muted">
-      <h3>Edit</h3>
-      <form method="POST" action="/urls/<%= shortURL %>">
-      <label for="newURL">New URL:</label>
-      <input type="text" name="newURL" placeholder="http://">
-      <button type="button" class="btn btn-outline-primary">Submit</button>
-      </form>
-  </div>
+      <% } else { %>
+        <p>You do not have access to this URL</p>
+      <% } %>
+    <% } %>
+ 
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
