Install cookie-session middleware and revise the code

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,7 +10,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <% if(user_id) { %>
           <form method="POST" class="form-inline" action="/logout">
-            <label style="width: 200px; margin-left: 250px;"> Login In As: <%= username %></label>
+            <label style="width: 200px; margin-left: 250px;">Logged In As: <%= useremail %></label>
             <button type="submit" class="btn btn-outline-dark">Logout</button>
           </div>
           </form>
