--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -17,18 +18,19 @@
                 <div class="container">
                     <div class="row text-black">
                         <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
-                            <h1 class="display-4 py-2 ">Login</h1>
+                            <h1 class="display-4 py-2 ">Register</h1>
                             <div class="px-2">
-                                <form method="POST" action="/login">
+                                <form method="POST" action="/register">
                                     <div class="form-group">
                                         <label>Email</label>
                                         <input name="email" class="form-control" placeholder="john@example.com">
                                     </div>
                                     <div class="form-group">
-                                        <label>Password</label>
-                                        <input name="password" class="form-control" placeholder="password123">
+                                        <label for="exampleInputPassword1">Password</label>
+                                        <input name="password" type="password" class="form-control"
+                                            id="exampleInputPassword1">
                                     </div>
-                                    <button type="submit" class="btn btn-outline-primary">Login</button>
+                                    <button type="submit" class="btn btn-outline-primary">Register</button>
                                 </form>
                             </div>
                         </div>
