--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>URL - TinyApp Example</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <title>URL - TinyApp Example</title>
 </head>
 
 <body>
-  <%- include('partials/_header') %>
-  <% if (user_id === undefined) { %>
-    <p>You are not logged in. Please continue to Login page or Register an account.</p> 
-  <% } else { %>
-    <% if (haveAccess) { %>
-      <div class="card text-center">
-          <div class="card-header"></div>
-          <div class="card-body">
-            <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-            <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-            <p class="card-text">Long URL: <a href="#<%= longURL %>"><%= longURL %></a></p>
-          </div>
-        <div class="card-footer text-muted">
-          <h3>Edit</h3>
-          <form method="POST" action="/urls/<%= shortURL %>">
-          <label for="newURL">New URL:</label>
-          <input type="text" name="newURL" placeholder="http://">
-          <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+    <%- include ("./partials/_header") %>
+        <div class="card text-center">
+            <div class="card-header"></div>
+            <div class="card-body">
+                <h5 class="card-title">TinyURL for: <%= longURL %>
+                </h5>
+                <p class="card-text">Short URL: <a href="/u/<%= shortURL %>">
+                        <%= shortURL %>
+                    </a></p>
+                <form action="/urls/<%= shortURL %>" method="POST">
+                    <label form="newURL">Edit URL:</label>
+                    <input type="text" name="newURL" placeholder="http://" style="width: 300px; margin: 1em">
+                    <button type="submit" class="btn btn-outline-primary">Edit</button>
+                </form>
+                <form action="/urls">
+                    <button class="btn btn-outline-dark">Looks Good?</button>
+                </form>
+
+            </div>
+
+            <div class="card-footer text-muted"></div>
         </div>
-      </div>
-      <% } else { %>
-        <p>You do not have access to this URL</p>
-      <% } %>
-    <% } %>
- 
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <!-- Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </body>
+
 </html>
