--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -22,11 +22,11 @@
                                 <form method="POST" action="/login">
                                     <div class="form-group">
                                         <label>Email</label>
-                                        <input name="email" class="form-control" placeholder="john@example.com">
+                                        <input name="email" class="form-control" placeholder="Email">
                                     </div>
                                     <div class="form-group">
                                         <label>Password</label>
-                                        <input name="password" class="form-control" placeholder="password123">
+                                        <input name="password" class="form-control" placeholder="Password">
                                     </div>
                                     <button type="submit" class="btn btn-outline-primary">Login</button>
                                 </form>
